<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CambiarMenu">

    <TextView
        android:id="@+id/textViewCambiarTitulo"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#B9B6BD"
        android:text="@string/textViewCambiarTitulo"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCambiarTitulo">

        <TextView
            android:id="@+id/textViewCambiarPrimerPlato"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/textViewCambiarPrimerPlato"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCambiarPrimerTitulo" />

        <TextView
            android:id="@+id/textViewCambiarPrimerTitulo"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/textViewCambiarPrimerTitulo"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonCambiarPrimer"
            android:layout_width="195sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#724f65"
            android:onClick="CambiarPrimeros"
            android:text="@string/buttonCambiarPrimer"
            android:textSize="20sp"
            app:icon="@android:drawable/ic_popup_sync"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCambiarPrimerTitulo" />

        <Button
            android:id="@+id/buttonCambiarVerPrimer"
            android:layout_width="195sp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#724f65"
            android:onClick="VerPrimeros"
            android:text="@string/buttonCambiarVerPrimer"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonCambiarPrimer" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <Button
            android:id="@+id/buttonCambiarVerSegundo"
            android:layout_width="195sp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#724f65"
            android:onClick="VerSegundos"
            android:text="@string/buttonCambiarVerSegundo"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonCambiarSegundo" />

        <Button
            android:id="@+id/buttonCambiarSegundo"
            android:layout_width="195sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#724f65"
            android:onClick="CambiarSegundos"
            android:text="@string/buttonCambiarSegundo"
            android:textSize="20sp"
            app:icon="@android:drawable/ic_popup_sync"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCambiarSegundoTitulo" />

        <TextView
            android:id="@+id/textViewCambiarSegundoPlato"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/textViewCambiarSegundoPlato"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCambiarSegundoTitulo" />

        <TextView
            android:id="@+id/textViewCambiarSegundoTitulo"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/textViewCambiarSegundoTitulo"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonCambiarAceptar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#724f65"
        android:onClick="Aceptar"
        android:text="@string/buttonCambiarAceptar"
        android:textSize="24sp"
        app:icon="@android:drawable/stat_sys_download"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>