<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevoMenu">

    <TextView
        android:id="@+id/textViewNuevoTitulo"
        android:layout_width="0dp"
        android:layout_height="49sp"
        android:layout_marginTop="8dp"
        android:background="#B9B6BD"
        android:text="@string/textViewNuevoTitulo"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNuevoDiasCarne"
        android:layout_width="230sp"
        android:layout_height="48sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/textViewNuevoDiasCarne"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNuevoTitulo" />

    <TextView
        android:id="@+id/textViewNuevoMenuVegano"
        android:layout_width="230sp"
        android:layout_height="48sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/textViewNuevoMenuVegano"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNuevoDiasPescado" />

    <TextView
        android:id="@+id/textViewNuevoAlimentosEvitar"
        android:layout_width="230sp"
        android:layout_height="48sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/textViewNuevoAlimentosEvitar"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNuevoMenuVegano" />

    <TextView
        android:id="@+id/textViewNuevoComensales"
        android:layout_width="230sp"
        android:layout_height="48sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/textViewNuevoComensales"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNuevoAlimentosEvitar" />

    <TextView
        android:id="@+id/textViewNuevoDiasPescado"
        android:layout_width="230sp"
        android:layout_height="48sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/textViewNuevoDiasPescado"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNuevoDiasCarne" />

    <CheckBox
        android:id="@+id/checkBox_vegano"
        android:layout_width="wrap_content"
        android:layout_height="48sp"
        android:layout_marginTop="8dp"
        android:onClick="Vegano"
        android:textAlignment="center"
        android:textColorHighlight="#10C517"
        android:textColorLink="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toEndOf="@+id/textViewNuevoMenuVegano"
        app:layout_constraintTop_toBottomOf="@+id/spinner_pescado" />

    <Spinner
        android:id="@+id/spinner_carne"
        android:layout_width="140sp"
        android:layout_height="48sp"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewNuevoDiasCarne"
        app:layout_constraintTop_toBottomOf="@+id/textViewNuevoTitulo" />

    <Spinner
        android:id="@+id/spinner_pescado"
        android:layout_width="140sp"
        android:layout_height="48sp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewNuevoDiasPescado"
        app:layout_constraintTop_toBottomOf="@+id/spinner_carne" />

    <Spinner
        android:id="@+id/spinner_comensales"
        android:layout_width="140sp"
        android:layout_height="48sp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/textViewNuevoComensales"
        app:layout_constraintTop_toBottomOf="@+id/buttonNuevoAlimentosEvitar" />

    <Button
        android:id="@+id/buttonNuevoAlimentosEvitar"
        android:layout_width="140sp"
        android:layout_height="48sp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#724f65"
        android:onClick="dialogIngredientes"
        android:textSize="24sp"
        app:icon="@android:drawable/arrow_down_float"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewNuevoAlimentosEvitar"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_vegano" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonNuevoCrear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="3"
            android:backgroundTint="#724f65"
            android:onClick="Crear"
            android:text="@string/buttonNuevoCrear"
            android:textSize="24sp"
            app:icon="@android:drawable/btn_star_big_on" />

        <Button
            android:id="@+id/buttonNuevoVolver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="3"
            android:backgroundTint="#724f65"
            android:onClick="Volver"
            android:text="@string/buttonNuevoVolver"
            android:textSize="24sp"
            app:icon="@android:drawable/ic_media_previous" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonNuevoInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#724f65"
        android:onClick="Info"
        android:text="@string/buttonNuevoInfo"
        app:icon="@android:drawable/stat_notify_chat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_comensales" />

</androidx.constraintlayout.widget.ConstraintLayout>